--- a/style.css
+++ b/style.css
@@ -49,3 +49,18 @@ html {
 .life-bar .life.danger {
     background-color: red;
 }
+
+/* Result area */
+.result {
+    display: flex;
+    justify-content: center;
+    font-weight: 600;
+}
+
+.result .win {
+    color: green;
+}
+
+.result .lose {
+    color: red;
+}
