--- a/style.css
+++ b/style.css
@@ -64,3 +64,42 @@ html {
 .result .lose {
     color: red;
 }
+
+/* Buttons area */
+.buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.btn {
+    padding: 5px 10px;
+    margin: 0 10px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+}
+
+.new-game {
+    background-color: #4253af;
+    color: #fff;
+}
+
+.attack {
+    background-color: #e51c23;
+    color: #fff;
+}
+
+.especial-attack {
+    background-color: #ff9800;
+    color: #000;
+}
+
+.heal {
+    background-color: #259b24;
+    color: #fff;
+}
+
+.give-up {
+    background-color: #bbb;
+    color: #000;
+}
