--- a/style.css
+++ b/style.css
@@ -103,3 +103,33 @@ html {
     background-color: #bbb;
     color: #000;
 }
+
+/* Logs area */
+.logs ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.logs ul li {
+    display: flex;
+    justify-content: center;
+    margin: 4px 0;
+    padding: 3px 0;
+    font-weight: 600;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    border-radius: 3px;
+}
+
+.player {
+    background-color: #4253afaa;
+    color: #fff;
+}
+
+.monster {
+    background-color: #e51c23aa;
+    color: #fff;
+}
